# tumbleweed-guiupdater

./: .gitignore  CMakeLists.txt  PROJECT_CHARTER.md  README.md
appdata/: org.padreadamo.tumbleweedupdater.appdata.xml
docs/: architecture.md  tumbleweed-updater.1  twu-ctl-notify.1  twu-ctl.1  updater-workflow
packaging/: tumbleweed-updater.spec
polkit/: org.padreadamo.tumbleweedupdater.policy
src/controller/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  TumbleweedUpdater.notifyrc  main.cpp  tumbleweed-updater.desktop
src/gui/qml/: Main.qml
src/notifier/: CMakeLists.txt  main.cpp
systemd/: tumbleweed-updater-check.service  tumbleweed-updater-check.timer
